# threes-solver

./: .gitignore  AI_POLICY.md  Cargo.toml  README.md  todo.txt
.github/workflows/: rust.yml
rng_util/: Cargo.toml  LICENSE-MIT  README.md
rng_util/src/: lib.rs
tee_output/: Cargo.toml  README.md
tee_output/src/: lib.rs
threes_simulator/: Cargo.toml  README.md  play.sh
threes_simulator/src/: board_state.rs  draw_pile.rs  game_state.rs  lib.rs  main.rs
threes_solver/: Cargo.toml  LICENSE-GPL3  README.md  build.rs  log_all_variations.sh  optimize.sh  optimize_results.txt  profile.sh  simulate.sh  simulate_to_success.sh  weights.toml
threes_solver/run_logs/: optimize_results.txt
threes_solver/src/: algo.rs  lib.rs  main.rs  optimizer.rs  output.rs  solver.rs  verbose_util.rs
threes_solver/src/algo/: algo_config.rs  core.rs  impls.rs  mod.rs  neighbors.rs  test_utils.rs  weighted.rs  wrappers.rs
threes_solver/src/algo/impls/: empties.rs  highs.rs  merges.rs  mod.rs  monotones.rs  shifts.rs  squeezes.rs
threes_solver/src/algo/wrappers/: few_empties_scaler.rs  mod.rs  moves_scaler.rs  value_booster_wrapper.rs
