[package]
name = "rng_util"
version = "0.2.0"
edition = "2024"
description = "A small wrapper for some Rng implementation details so they can be abstracted away from threes_simulator and threes_solver"
license = "MIT"
repository = "https://github.com/truist/threes-solver"
authors = ["Nathan Arthur <narthur+cargo@rainskit.com>"]
keywords = ["rng"]
categories = ["development-tools", "rust-patterns"]

[dependencies]
rand = "0.9"
rand_xoshiro = "0.7.0"

