[package]
name = "tee_output"
version = "0.2.0"
edition = "2024"
description = "Provides 'tee' functionality for the current process"
license = "MIT"
repository = "https://github.com/truist/threes-solver"
authors = ["Nathan Arthur <narthur+cargo@rainskit.com>"]
keywords = ["tee", "stdout", "redirect"]
categories = ["development-tools", "rust-patterns"]

[dependencies]
filedescriptor = "0.8"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
