[package]
name = "threes_solver"
version = "0.1.0"
edition = "2024"

[dependencies]
threes_simulator = { path = "../threes_simulator", features = ["workspace_test"] }
rng_util = { path = "../rng_util" }
strum = "0.27.2"
strum_macros = "0.27.2"
cmaes = "0.2.2"
num_cpus = "1.17.0"
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"

