[package]
name = "threes_solver"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
threes_simulator = { path = "../threes_simulator", features = ["workspace_test"] }
rng_util = { path = "../rng_util" }
strum = "0.27.2"
strum_macros = "0.27.2"
cmaes = "0.2.2"
num_cpus = "1.17.0"
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
ctrlc = "3.5.1"
jiff = "0.2.16"
crossterm = "0.29.0"
sysinfo = "0.30"
tee_output = { path = "../tee_output" }

[build-dependencies]
vergen-gix = { version = "1.0.0", features = ["build", "rustc", "si"] }
sha2 = "0.10.9"
